# prep-dojo

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  TODOS.md  alembic.ini  idea.md  justfile  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 20260410_000001_initial_schema.py  20260410_000002_question_transition_audit.py
app/: __init__.py  cli.py  main.py
app/core/: auth.py  enums.py  local_dev.py  observability.py  settings.py
app/db/: models.py  session.py
app/schemas/: domain.py
app/seeds/: __init__.py  reference_data.py
app/services/: authoring.py  persistence.py  practice_sessions.py  scoring.py
config/: app.toml  deploy.toml  local-dev.yaml.example
docs/: cloud-deployment-readiness.md  frontend-demo-admin-and-user-experience.md  frontend-implementation-plan.md  smu-finance-interview-prep-engine.md  sprint-1-conceptual-model-and-assessment-framework.md  sprint-2-pilot-readiness-and-content-operations.md  sprint-3-hardening-observability-and-developer-baseline.md
tests/: conftest.py  test_authoring_access.py  test_authoring_operations.py  test_db_session.py  test_domain_contracts.py  test_local_dev.py  test_observability.py  test_persistence.py  test_practice_sessions.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.tsx
web/src/api/: authored.ts  client.ts  practiceSessions.ts  reference.ts
web/src/app/: appConfig.ts  router.tsx
web/src/data/: demoSession.ts
web/src/pages/: LandingPage.tsx  OperatorHomePage.tsx  ResultPage.tsx  (+4 more)
(+40 files in other folders)
